--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+    font-family: 'Cinema';
+    src: url('./Cinema.otf');
+    font-weight: 400;
+    font-style: normal;
+}
+
+h1, h2,h3 {
+    font-family: OpenSans, sans-serif;
+    font-weight: 400;
+}
